--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,7 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <img src="/img/ver1-2-3.png" alt="Version" />
+      <img src="/img/ver2.png" alt="Version" />
+      <img src="/img/plus.png" alt="Version" />
+      <img src="/img/ver3.png" alt="Version" />
       <fieldset>
         <form action="/" method="post">
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
