--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,9 +8,9 @@
   </head>
   <body>
     <div class="container">
-      <img src="/img/ver1.png" alt="Version1" />
-      <!-- <img src="/img/ver2.png" alt="Version2" />
-      <img src="/img/plus.png" alt="CombinedVersions" />
+      <!-- <img src="/img/ver1.png" alt="Version1" /> -->
+      <img src="/img/ver2.png" alt="Version2" />
+      <!-- <img src="/img/plus.png" alt="CombinedVersions" />
       <img src="/img/ver3.png" alt="Version3" /> -->
       <fieldset>
         <form action="/" method="post">
