--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,13 @@
   </head>
   <body>
     <div class="container">
-      <p />
-      <!-- <img src="/img/ver1.png" alt="Version1" /> -->
-      <img src="/img/ver2.png" alt="Version2" />
-      <!-- <img src="/img/plus.png" alt="CombinedVersions" />
-      <img src="/img/ver3.png" alt="Version3" /> -->
+      <p>
+        <!-- <img src="/img/ver1.png" alt="Version1" /> -->
+        <!-- <img src="/img/ver2.png" alt="Version2" /> -->
+        <!-- <img src="/img/plus.png" alt="CombinedVersions" /> -->
+        <img src="/img/ver3.png" alt="Version3" />
+        <!-- <img src="/img/ver1-2-3.png" alt="Version3" /> -->
+      </p>
       <fieldset>
         <form action="/" method="post">
           <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
