--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,11 +9,11 @@
   <body>
     <div class="container">
       <p>
-        <!-- <img src="/img/ver1.png" alt="Version1" /> -->
+        <img src="/img/ver1.png" alt="Version1" />
         <!-- <img src="/img/ver2.png" alt="Version2" /> -->
         <!-- <img src="/img/plus.png" alt="CombinedVersions" /> -->
         <!-- <img src="/img/ver3.png" alt="Version3" /> -->
-        <img src="/img/ver1-2-3.png" alt="Version1-2-3" />
+        <!-- <img src="/img/ver1-2-3.png" alt="Version1-2-3" /> -->
       </p>
       <fieldset>
         <form action="/" method="post">
