--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,33 +1,108 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8">
-    <title>Test</title>
-    <link rel="stylesheet" type="text/css" href="/css/style.css">
-    <link href='https://fonts.googleapis.com/css?family=Open+Sans:300' rel='stylesheet' type='text/css'>
-  </head>
-  <body>
-    <div class="container">
-      <p>
-        <img src="/img/ver1.png" alt="Version1" />
-        <!-- <img src="/img/ver2.png" alt="Version2" /> -->
-        <!-- <img src="/img/plus.png" alt="CombinedVersions" /> -->
-        <!-- <img src="/img/ver3.png" alt="Version3" /> -->
-        <!-- <img src="/img/ver1-2-3.png" alt="Version1-2-3" /> -->
-      </p>
-      <fieldset>
-        <form action="/" method="post">
-          <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
-          <input type="submit" class="ghost-button" value="Get Weather">
-        </form>
-        <% if(weather !== null){ %>
-          <p><%= weather %></p>
-        <% } %>
+<head><title>Demo App</title>
+<meta name="viewport" content="width=device-width, initial-scale=1">
+<link rel="stylesheet" type="text/css" href="/css/style.css">
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+<style>
+/* body {
+  margin: 0;
+  font-family: Arial, Helvetica, sans-serif;
+} */
 
-        <% if(error !== null){ %>
-          <p><%= error %></p>
-        <% } %>
-      </fieldset>
-    </div>
-  </body>
+.topnav {
+  overflow: hidden;
+  background-color: #333;
+}
+
+.topnav a {
+  float: left;
+  display: block;
+  color: #f2f2f2;
+  text-align: center;
+  padding: 14px 16px;
+  text-decoration: none;
+  font-size: 17px;
+}
+
+.topnav a:hover {
+  background-color: #ddd;
+  color: black;
+}
+
+.topnav a.active {
+  /* background-color: #4CAF50; */
+  background-color: #FDD017;
+  color: white;
+}
+
+.topnav .icon {
+  display: none;
+}
+
+@media screen and (max-width: 600px) {
+  .topnav a:not(:first-child) {display: none;}
+  .topnav a.icon {
+    float: right;
+    display: block;
+  }
+}
+
+@media screen and (max-width: 600px) {
+  .topnav.responsive {position: relative;}
+  .topnav.responsive .icon {
+    position: absolute;
+    right: 0;
+    top: 0;
+  }
+  .topnav.responsive a {
+    float: none;
+    display: block;
+    text-align: left;
+  }
+}
+</style>
+</head>
+<body>
+
+<div class="topnav" id="myTopnav">
+  <a href="#home" class="active">Home</a>
+  <!-- <a href="#news">News</a> -->
+  <!-- <a href="#contact">Contact</a> -->
+  <!-- <a href="#about">About</a> -->
+  <a href="javascript:void(0);" class="icon" onclick="myFunction()">
+    <i class="fa fa-bars"></i>
+  </a>
+</div>
+
+<div style="padding-left:16px">
+  <h2>Demo App</h2>
+  <p>Responsive page. Resize the browser window to see how it works.</p>
+  
+  <div class="container"><fieldset>
+    <form action="/" method="post">
+      <input name="city" type="text" class="ghost-input" placeholder="Enter a City" required>
+      <input type="submit" class="ghost-button" value="Get Weather">
+    </form>
+    <% if(weather !== null){ %>
+      <p><%= weather %></p>
+    <% } %>
+    <% if(error !== null){ %>
+      <p><%= error %></p>
+    <% } %>
+  </fieldset></div>
+</div>
+
+<script>
+function myFunction() {
+  var x = document.getElementById("myTopnav");
+  if (x.className === "topnav") {
+    x.className += " responsive";
+  } else {
+    x.className = "topnav";
+  }
+}
+</script>
+
+</body>
 </html>
