--- a/public/css/style.css
+++ b/public/css/style.css
@@ -4,12 +4,14 @@
 */
 
 body {
-  width: 800px;
+  /* width: 800px; */
+  width: 80%;
   margin: 0 auto;
   font-family: 'Open Sans', sans-serif;
 }
 .container {
-  width: 600px;
+  /* width: 600px; */
+  width: 80%;
   margin: 0 auto;
 }
 fieldset {
@@ -26,14 +28,15 @@ fieldset {
   border-image-width: initial;
   border-image-outset: initial;
   border-image-repeat: initial;
-  min-width: -webkit-min-content;
+  /* min-width: -webkit-min-content; */
+  min-width: 80%;
   padding: 30px;
 }
 .ghost-input, p {
   display: block;
-  font-weight:300;
+  font-weight:100;
   width: 100%;
-  font-size: 25px;
+  font-size: 20px;
   border:0px;
   outline: none;
   width: 100%;
@@ -58,8 +61,9 @@ fieldset {
   background-color: transparent;
   border:2px solid #ddd;
   padding:10px 30px;
-  width: 100%;
-  min-width: 350px;
+  width: 80%;
+  /* min-width: 350px; */
+  min-width: 80%;
   -webkit-transition: all 0.1s ease-in-out;
   -moz-transition: all 0.1s ease-in-out;
   -ms-transition: all 0.1s ease-in-out;
