--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,7 +26,7 @@
         <input type="submit" class="ghost-button" value="Get Weather">
       </form>
       <% if(weather !== null){ %>
-        <p><%= weather %></p>
+        <p><%= weather %> &#8457;</p>
       <% } %>
       <% if(error !== null){ %>
         <p><%= error %></p>
