--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,10 +8,8 @@
   </head>
   <body>
     <div class="topnav" id="myTopnav">
-      <a href="/" class="active">Home</a>
-      <!-- <a href="/todo">Todo</a> -->
-      <!-- <a href="contact">Contact</a> -->
-      <!-- <a href="/about">About</a> -->
+      <!-- Navigation menu -->
+      <%- include('templates/nav') %>
       <a href="javascript:void(0);" class="icon" onclick="myFunction()">
         <i class="fa fa-bars"></i>
       </a>
@@ -46,6 +44,6 @@
     </script>
 
     <!-- Footer  -->
-    <%- include('partials/footer') %>
+    <%- include('templates/footer') %>
   </body>
 </html>
